--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,15 +1,10 @@
-{% include "recipes/partials/head.html" %}
+{% include 'recipes/partials/head.html' %}
 
 <body>
-    <header class="main-header-container">
-        <div class="main-header container">
-            <h1>
-                <a class="main-logo" href="/">
-                    <i class="fas fa-utensils main-logo-icon"></i>
-                    <span class="main-logo-text">Recipies</span>
-                </a>
-            </h1>
-        </div>
-    </header>
+    
+    {% include 'recipes/partials/header.html' %}
+    {% include 'recipes/partials/search.html' %}
+
+
 </body>
 </html>
