--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,10 +1,14 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-cover">
-        <img src="https://fakeimg.pl/1080x720/212336/ffffff" alt="Imagem temporária">
+        <a href=" {% url "recipes:recipe" recipe.id %} ">
+            <img src="{{ recipe.cover.url }}" alt="Imagem temporária">
+        </a>
     </div>
     <div class="recipe-title-container">
         <h2 class="recipe-title">
-            {{ recipe.title }}
+            <a href=" {% url "recipes:recipe" recipe.id %} ">
+                {{ recipe.title }}
+            </a>
         </h2>
     
     </div>
@@ -42,10 +46,18 @@
             </div>
         </div>
     </div>
-    <footer class="recipe-footer">
-        <a class="recipe-read-more button button-dark button-full-width" href="/recipes/3/">
-            <i class="fas fa-eye"></i>
-            <span>ver mais...</span>
-        </a>
-    </footer>
+    {% if is_datails_page is not True %} 
+        <footer class="recipe-footer">
+            <a class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipe' recipe.id %}">
+                <i class="fas fa-eye"></i>
+                <span>ver mais...</span>
+            </a>
+        </footer>
+    {% endif %}
+
+    {% if is_datails_page is True %}
+        <div class="preparation-steps">
+            {{ recipe.preparation_steps|linebreaksbr }}
+        </div>
+    {% endif %}
 </div>
