--- a/base_static/recipes/css/styles.css
+++ b/base_static/recipes/css/styles.css
@@ -297,3 +297,27 @@ a {
   margin: 2rem;
   padding: 0 2rem;
 }
+
+.pagination-content {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1rem 0.5rem;
+}
+
+.pagination .page-item {
+  text-decoration: none;
+  background: var(--color-gray-3);
+  padding: 0.5rem 1rem;
+}
+
+.pagination .page-link {
+  text-decoration: none;
+  background: var(--color-primary);
+  color: var(--color-white);
+}
+
+.pagination .page-current {
+  text-decoration: none;
+  background: var(--color-primary-dark);
+  color: var(--color-white);
+}
